<resources>
    <string name="app_name">PocketDungeon</string>
    <string name="LOGIN_PREFS">edu.tacoma.uw.pocketdungeon.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">Sign Out</string>
    <string name="USERID">userid</string>

    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="characters">Characters</string>
    <string name="campaigns">Campaigns</string>
    <string name="title_activity_character_list">CharacterListActivity</string>
    <string name="title_activity_character_detail">CharacterDetailActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="enter_character_name_hint">Name</string>
    <string name="enter_character_class_hint">Clas</string>
    <string name="enter_character_race_hint">Race</string>
    <string name="enter_character_level_hint">Level</string>
    <string name="btn_add_character">Add Character</string>

    <string name="CREATE_CHARACTERS_SQL">
    CREATE TABLE IF NOT EXISTS Characters
    (id TEXT PRIMARY KEY, shortDesc TEXT,
    longDesc TEXT, prereqs TEXT)
    </string>

    <string name="DROP_CHARACTERS_SQL">
    DROP TABLE IF EXISTS Characters
    </string>

    =======

    >>>>>>> Stashed changes
</resources>
