<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".character.CharacterAddFragment">
    <EditText
        android:id="@+id/add_character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_character_name_hint" />
    <EditText
        android:id="@+id/add_character_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_character_class_hint" />
    <EditText
        android:id="@+id/add_character_race"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_character_race_hint" />
    <EditText
        android:id="@+id/add_character_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_character_level_hint" />
    <Button
        android:id="@+id/btn_add_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_add_character" />
</LinearLayout>
